# ComfyUI-Sidebar-Gallery

./: .comfyignore  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  section_catalog.json
server/: comfy_graph.py  config.py  db.py  metadata.py  routes.py  schema.py  search.py  security.py
web/: sbg-color-picker.js  sbg-core.js  sbg-default-layout.js  sbg-gallery.js  sbg-layout-editor.js  sbg-lightbox.js  sbg-section-registry.js  sbg-settings.js  sbg-sortable.js  sbg-translation-layer.js  sidebar_gallery.css  sidebar_gallery.js
